# zoomcamp

./: README.md  mlexp.db  pyproject.toml
01-Intro/: Homework.ipynb  duration-prediction.ipynb
02-Experiment-tracking/: experiment-tracking.ipynb  mlexp.db  mlflow.db  model_registry.ipynb
02-Experiment-tracking/mlruns/1/11877bd07a354104b81245a8a73e2154/artifacts/model/: MLmodel
02-Experiment-tracking/mlruns/1/11877bd07a354104b81245a8a73e2154/artifacts/preprocessor/: preprocessor.b
02-Experiment-tracking/mlruns/1/4fda465939d94d628569cc31319cfb69/artifacts/: metric_info.json
02-Experiment-tracking/mlruns/1/4fda465939d94d628569cc31319cfb69/artifacts/model/: MLmodel  model.pkl
02-Experiment-tracking/mlruns/1/5a2ea0d1f046462a8fe7b1d828ab0c62/artifacts/: estimator.html
02-Experiment-tracking/mlruns/1/5a2ea0d1f046462a8fe7b1d828ab0c62/artifacts/model/: MLmodel
02-Experiment-tracking/mlruns/1/7ecb816404814450a1a899e8b843dc1c/artifacts/models_mlflow/: MLmodel  conda.yaml  registered_model_meta
02-Experiment-tracking/mlruns/1/a56c74a9c05140a1a31dae52cc1f8b28/artifacts/: feature_importance_weight.json
02-Experiment-tracking/mlruns/1/afce309bb2f047289cf4ca657312b6f5/artifacts/: feature_importance_weight.json
02-Experiment-tracking/mlruns/1/e73e7c3e19984545bdbb7f1534cfda30/artifacts/: estimator.html
02-Experiment-tracking/mlruns/2/1390dc896c0f4600958cd4c1f56ce71a/artifacts/: estimator.html
02-Experiment-tracking/mlruns/2/21ebd6f5b0634b41bf7f1d2b819d221f/artifacts/: estimator.html
Trees/: decisiontrees.ipynb
my_poetry_project/: pyproject.toml
(+15 files in other folders)
