[project]
name = "virt"
version = "1.0"
description = "project environment"
authors = [
    {name = "Pravir"}
]
license = {text = "None"}
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
