[project]
name = "my-poetry-project"
version = "0.1.0"
description = "virtual env"
authors = [
    {name = "Pravir"}
]
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "mlflow (>=2.20.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
